# omnidoc-mvp

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.nix  schema.json  start.sh  start_voice_service.sh  tailwind.config.ts  voice_api.py  voice_service_test.py
attached_assets/: Pasted-You-are-building-a-modern-React-Vite-based-front-end-web-app-for-a-product-called-OmniDoc-The-bac-1744691539166.txt  Pasted-chief-complaint-Here-is-a-concise-summary-of-the-patient-s-chief-complaint-Chief-Complaint-Ab-1744738474983.txt  Pasted-import-os-import-json-import-openai-from-voice-import-get-text-from-voice-speak-text-out-loud--1744704107537.txt
client/src/: App.tsx  main.tsx
client/src/components/layout/: MainLayout.tsx  MobileHeader.tsx  MobileSidebar.tsx  Sidebar.tsx
client/src/components/patients/: EmptyState.tsx  PatientCard.tsx  PatientsList.tsx
client/src/components/reports/: ReportDetail.tsx
client/src/components/sessions/: EmptySessionState.tsx  SessionRow.tsx  SessionsList.tsx
client/src/hooks/: auth-provider.tsx  useAuth.tsx
client/src/lib/: email-service.ts  supabase.ts
client/src/pages/: create-session.tsx  dashboard.tsx  login.tsx  patient-detail.tsx  patient-detail.tsx.bak  session-link.tsx
client/src/types/: index.ts
server/: elevenlabs-tts.ts  llm-service.ts  routes.ts  send-email.ts  smtp-email-service.ts  storage.ts  voice-proxy.ts  voice_api.py
shared/: schema.ts
